More comments for projectiles

--- a/src/data/structs/h1/tags/projectile.yml
+++ b/src/data/structs/h1/tags/projectile.yml
@@ -14,10 +14,28 @@ type_defs:
     size: 4
     bits:
       - name: oriented_along_velocity
+        comments: 
+          en: >
+            Projectile will always face in the
+            direction it's moving in.
       - name: ai_must_use_ballistic_aiming
+        comments:
+          en: >
+            AI will try to arc their shots to hit their targets rather
+            than firing directly at them. Useful if the projectile has
+            a strong arc or long travel time, throws off AI aim if not.
       - name: detonation_max_time_if_attached
       - name: has_super_combining_explosion
+        comments:
+          en: >
+            If seven of this projectile are attached to the same biped,
+            this projectile's super detonation effect will be triggered.
+            This number is hardcoded and cannot be changed.
       - name: combine_initial_velocity_with_parent_velocity
+        comments:
+          en: >
+            Unknown effect. Even without this flag, the shooter's
+            velocity is added to the projectile's when firing.
       - name: random_attached_detonation_time
       - name: minimum_unattached_detonation_time
   ProjectileDetonationTimerStarts:
@@ -64,6 +82,7 @@ type_defs:
     size: 2
     bits:
       - name: only_against_units
+      - name: never_against_units
   ProjectileScaleEffectsBy:
     class: enum
     size: 2
