--- a/src/data/structs/h1/tags/vehicle.yml
+++ b/src/data/structs/h1/tags/vehicle.yml
@@ -122,7 +122,7 @@ type_defs:
         type: float
         comments:
           en: >
-            The minimum speed where the vehicle's [gbxmodel ~blur
+            The minimum speed where the vehicle's [gbxmodel blur
             permutation](~gbxmodel#permutations) is used for fake motion blur. An
             example is the Warthog's tires.
       - name: vehicle_a_in
@@ -178,7 +178,7 @@ type_defs:
         type: float
         comments:
           en: >
-            How far the pilot tries to stay way from pathfinding markers.
+            How far the pilot tries to stay away from [pathfinding markers](~model_collision_geometry#pathfinding-spheres).
       - name: ai_charge_repeat_timeout
         type: float
         comments:
