Comment for danger radius

--- a/src/data/structs/h1/tags/projectile.yml
+++ b/src/data/structs/h1/tags/projectile.yml
@@ -206,6 +206,10 @@ type_defs:
         type: float
         meta:
           unit: world units
+        comments:
+          en: >
+            Actors within this distance of the projectile may attempt to
+            avoid it, such as by diving away, depending on actor settings.
       - name: effect
         type: TagDependency
         meta:
