Further explain hover thrusters

--- a/src/data/structs/h1/tags/vehicle.yml
+++ b/src/data/structs/h1/tags/vehicle.yml
@@ -199,3 +199,6 @@ type_defs:
         meta:
           tag_classes:
             - effect
+        comments:
+          en: >
+            Used for [hover/jet thruster effects](~gbxmodel#markers).
