--- a/src/data/structs/h1/tags/scenario_structure_bsp.yml
+++ b/src/data/structs/h1/tags/scenario_structure_bsp.yml
@@ -158,6 +158,12 @@ type_defs:
         size: 2
       - name: rendered_vertices_count
         type: uint32
+        comments:
+          en: >
+            The number of rendered vertices for this material, found at
+            _rendered vertices offset_. This count is always equal to [_lightmap
+            vertices count_](#tag-field-lightmaps-materials-lightmap-vertices-count)
+            when the bitmap index is not `-1`.
       - name: rendered_vertices_offset
         type: uint32
         comments:
@@ -195,12 +201,18 @@ type_defs:
         size: 2
       - name: lightmap_vertices_count
         type: uint32
+        comments:
+          en: >
+            The number of lightmap vertices for this material, found at
+            _lightmap vertices offset_. This count is always equal to [_rendered
+            vertices count_](#tag-field-lightmaps-materials-rendered-vertices-count)
+            when the bitmap index is not `-1`.
       - name: lightmap_vertices_offset
         type: uint32
         comments:
           en: |-
             An offset to an array of lightmap vertices, each 20 bytes:
-            * Normal (used for dynamic object shadows)
+            * Normal (indicates incident radiosity vector, used for dynamic object shadows)
             * UV
       - type: pad
         size: 4
@@ -228,6 +240,17 @@ type_defs:
     fields:
       - name: bitmap
         type: Index
+        comments:
+          en: >
+            Indicates which index of bitmap data within the
+            [lightmaps bitmap](#tag-field-lightmaps-bitmap) is used
+            for the faces of these materials. In other words, the baked lightmaps
+            can be split across multiple bitmap "pages" and this index tells the
+            game what page the faces of these materials use. An index of `-1`
+            (usually found on the last item in this block) means these faces are
+            still rendered but aren't lightmapped, used for
+            [additive blended](~shader_transparent_chicago#tag-field-framebuffer-blend-function)
+            transparent shaders like lights.
       - type: pad
         size: 2
       - type: pad
