--- a/src/data/hsc/h1/globals.yml
+++ b/src/data/hsc/h1/globals.yml
@@ -2572,8 +2572,11 @@ external_globals:
     info:
       en: |-
         ```hsc
-        (rasterizer_bump_mapping)
+        (rasterizer_bump_mapping [boolean])
         ```
+        Toggles bump mapping on the BSP, affecting both environmental bump
+        lighting and specular reflections. If you only want to toggle
+        bump lighting, use `rasterizer_lightmaps_incident_radiosity`.
   - slug: rasterizer_d3dlight_attenuation0
     info:
       en: |-
@@ -2783,8 +2786,9 @@ external_globals:
     info:
       en: |-
         ```hsc
-        (rasterizer_environment_reflections)
+        (rasterizer_environment_reflections [boolean])
         ```
+        Toggles specular reflections in the BSP.
   - slug: rasterizer_environment_shadows
     info:
       en: |-
@@ -2928,24 +2932,39 @@ external_globals:
         (rasterizer_lens_flares)
         ```
   - slug: rasterizer_lens_flares_occlusion
+    tags:
+      - lens_flare
     info:
       en: |-
         ```hsc
-        (rasterizer_lens_flares_occlusion)
+        (rasterizer_lens_flares_occlusion [boolean])
         ```
+        Toggles [lens flare](~lens_flare) occlusion. If set to `false`, lens
+        flares will no longer be occluded and stay visible even through objects
+        in the foreground.
   - slug: rasterizer_lens_flares_occlusion_debug
+    tags:
+      - lens_flare
     info:
       en: |-
         ```hsc
-        (rasterizer_lens_flares_occlusion_debug)
+        (rasterizer_lens_flares_occlusion_debug [boolean])
         ```
+        Displays red squares over [lens flares](~lens_flare) in the environment.
+        How much the square is occluded by other geometry or the view frustrum
+        is how much the lens flare fades out. The size of the square relates to
+        the [_occlusion radius_](~lens_flare#tag-field-occlusion-radius).
   - slug: rasterizer_lightmap_ambient
     info:
       en: |-
         ```hsc
         (rasterizer_lightmap_ambient [real])
         ```
-        Defaults to `1.0`. No visible effect when changed.
+        Sets the amount of ambient light when rendering the BSP in fullbright mode
+        (like when radiosity has not yet been baked or `rasterizer_lightmap_mode 2`)
+        This defaults to `1.0`. It has no effect on the normal lightmap rendering mode.
+      tags:
+        - lightmaps
   - slug: rasterizer_lightmap_mode
     tags:
       - lightmaps
@@ -2954,9 +2973,16 @@ external_globals:
         ```hsc
         (rasterizer_lightmap_mode [short])
         ```
-        If the mode is `0`, the default, BSP specular reflections will be multiplied
-        by the [lightmap](~lightmaps). Any other value results in reflections being
-        unaltered.
+        Changes the rendering mode of [lightmaps](~):
+        | Mode | Description |
+        |------|-------------|
+        | `0`  | Normal (default).
+        | `1`  | BSP specular reflections will not be multiplied by the lightmap.
+        | `2`  | Fullbright mode. You can set the ambient light with `rasterizer_lightmap_ambient`.
+        | `3`  | Colours BSP surfaces by what lightmap [bitmap index](~scenario_structure_bsp#tag-field-lightmaps-bitmap) they use. It can help to disable `rasterizer_environment_diffuse_textures` and `rasterizer_environment_reflections` to see this more clearly.
+        | `4`  | Fullbright without environmental bump map lighting. Ambient light is not configurable in this mode.
+        
+        Any higher value will appear the same as `1`. Repeated changing of this value can cause degraded performance and eventually a crash.
   - slug: rasterizer_lightmaps_filtering
     tags:
       - lightmaps
@@ -2974,13 +3000,23 @@ external_globals:
         ```hsc
         (rasterizer_lightmaps_incident_radiosity [boolean])
         ```
-        No visible effect.
+        Toggles directional environmental bump mapped lighting. Does not
+        affect the sampling of [stored incident radiosity](~scenario_structure_bsp#tag-field-lightmaps-materials-lightmap-vertices-offset)
+        for object shadows.
+    tags:
+      - lightmaps
   - slug: rasterizer_mode
     info:
       en: |-
         ```hsc
-        (rasterizer_mode)
+        (rasterizer_mode [short])
         ```
+        Changes rendering mode of the level and its objects:
+        | Mode | Description |
+        |------|-------------|
+        | `0`  | Normal (default).
+        | `1`  | Additive blending.
+        | `2`  | Disables specular on the BSP (like `rasterizer_environment_reflections`).
   - slug: rasterizer_model_lighting_ambient
     info:
       en: |-
