--- a/src/data/structs/h1/tags/scenario_structure_bsp.yml
+++ b/src/data/structs/h1/tags/scenario_structure_bsp.yml
@@ -212,8 +212,8 @@ type_defs:
         comments:
           en: |-
             An offset to an array of lightmap vertices, each 20 bytes:
-            * Normal (indicates incident radiosity vector, used for dynamic object shadows)
-            * UV
+            * Incident radiosity vector, used for dynamic object shadows and environmental bump mapping)
+            * UV coordinate in lightmap page indicated by bitmap index.
       - type: pad
         size: 4
       - name: lightmap_vertices_index_pointer
@@ -243,7 +243,7 @@ type_defs:
         comments:
           en: >
             Indicates which index of bitmap data within the
-            [lightmaps bitmap](#tag-field-lightmaps-bitmap) is used
+            [lightmap bitmaps](#tag-field-lightmap-bitmaps) is used
             for the faces of these materials. In other words, the baked lightmaps
             can be split across multiple bitmap "pages" and this index tells the
             game what page the faces of these materials use. An index of `-1`
@@ -871,7 +871,7 @@ type_defs:
         multiple BSPs.
     assert_size: 648
     fields:
-      - name: lightmaps_bitmap
+      - name: lightmap_bitmaps
         type: TagDependency
         meta:
           tag_classes:
