--- a/src/data/hsc/h1/globals.yml
+++ b/src/data/hsc/h1/globals.yml
@@ -3278,9 +3278,18 @@ external_globals:
     info:
       en: |-
         ```hsc
-        (rasterizer_stats [boolean])
+        (rasterizer_stats [short])
         ```
-        Displays framerate statistics on the screen, including average, min, max, and dropped.
+        Displays renderer statistics on the screen, with several modes. All modes
+        include at least framerate stats.
+        | Mode | Description |
+        |------|-------------|
+        | `0`  | Off (default).
+        | `1`  | Some unknown counts which always read 0.
+        | `2`  | Vertices, triangles, and primitives counts for various model and environment features and effects. **This mode causes glitched rendering and will crash Halo eventually**.
+        | `3`  | GPU profiling for each stage of rendering. Uknown if this still works.
+        | `4`  | Memory usage for dynamic vertices, shadow buffers, and more.
+        | `5`  | Just framerate stats.
   - slug: rasterizer_stencil_mask
     info:
       en: |-
